ucs-test-ucsschool (6.0.90) unstable; urgency=low

  * Bug #50678: add tests for linting

 -- Daniel Troeder <troeder@univention.de>  Thu, 16 Jan 2020 09:27:33 +0100

ucs-test-ucsschool (6.0.89) unstable; urgency=medium

  * Bug #50678: 94_ucsschool-api-kelvin/10_run_supplied_tests

 -- Jürn Brodersen <brodersen@univention.de>  Thu, 16 Jan 2020 00:12:12 +0100

ucs-test-ucsschool (6.0.88) unstable; urgency=low

  * Bug #50678: updates for Kelvin API tests

 -- Daniel Troeder <troeder@univention.de>  Wed, 15 Jan 2020 17:20:52 +0100

ucs-test-ucsschool (6.0.87) unstable; urgency=medium

  * Bug #50594: adjust test case for new texts in login dialog

 -- Jürn Brodersen <brodersen@univention.de>  Tue, 07 Jan 2020 17:31:57 +0100

ucs-test-ucsschool (6.0.86) unstable; urgency=medium

  * Bug #50687: fix importou.py dhcp subnet creation

 -- Jürn Brodersen <brodersen@univention.de>  Mon, 06 Jan 2020 17:19:10 +0100

ucs-test-ucsschool (6.0.85) unstable; urgency=low

  * Bug #50513: wait for s4connector after deleting objects

 -- Daniel Troeder <troeder@univention.de>  Mon, 18 Nov 2019 15:45:41 +0100

ucs-test-ucsschool (6.0.84) unstable; urgency=medium

  * Bug #50462: fix import error in new kelvin tests

 -- Ole Schwiegert <schwiegert@univention.de>  Mon, 11 Nov 2019 11:11:02 +0100

ucs-test-ucsschool (6.0.83) unstable; urgency=medium

  * Bug #50473: fix 115_modify_userattributes_and_ldap_acl for upgrades from 4.3

 -- Jürn Brodersen <brodersen@univention.de>  Fri, 08 Nov 2019 12:42:52 +0100

ucs-test-ucsschool (6.0.82) unstable; urgency=medium

  * Bug #50274: Adjust 55_class_assignment.py to changed ACL

 -- Jürn Brodersen <brodersen@univention.de>  Fri, 08 Nov 2019 10:53:08 +0100

ucs-test-ucsschool (6.0.81) unstable; urgency=low

  * Bug #50462: fix install error

 -- Ole Schwiegert <schwiegert@univention.de>  Fri, 08 Nov 2019 09:53:22 +0100

ucs-test-ucsschool (6.0.80) unstable; urgency=low

  * Bug #50462: renaming test sections for bb api and clone for kelvin
